--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -850,8 +850,8 @@
         <h4 class="font-bold mb-4">サポート</h4>
         <ul class="space-y-2 text-gray-400">
           <li><a th:href="@{/about#faq}" class="hover:text-white">よくある質問</a></li>
-          <li><a href="#" class="hover:text-white">プライバシーポリシー</a></li>
-          <li><a href="#" class="hover:text-white">利用規約</a></li>
+          <li><a th:href="@{/privacy}" class="hover:text-white">プライバシーポリシー</a></li>
+          <li><a th:href="@{/terms}" class="hover:text-white">利用規約</a></li>
         </ul>
       </div>
     </div>
